# physcial-ai-and-humanoid-robotics-course-book

.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: api.py  data_reterive.py  embeding_helpers.py  main.py  models.py  pyproject.toml  rag_agent.py  requirements.txt  router.py
history/prompts/1-rag-platform/: 001-fastapi-phase-2b.tasks.prompt.md  001-homepage-task-generation.tasks.prompt.md  001-implement-homepage-curriculum.red.prompt.md  002-curriculum-structure-tasks.tasks.prompt.md  002-fastapi-backend-impl.red.prompt.md  003-fastapi-complete-phase2b.green.prompt.md  004-spec-plan-sync.green.prompt.md  005-frontend-pivot-custom-widget.green.prompt.md  006-chat-widget-phase2c.green.prompt.md  007-robot-logo-favicon-styling.green.prompt.md  008-ui-ux-enhancements-modern-design.green.prompt.md
history/prompts/constitution/: 001-expand-constitution-with-part-2a.constitution.prompt.md  001-update-constitution-part-1-structure.constitution.prompt.md  002-expand-constitution-with-part-2b.constitution.prompt.md  1-initialize-project-constitution.constitution.prompt.md  4-review-constitution-document.constitution.prompt.md  5-update-project-constitution-with-new-standards.constitution.prompt.md
history/prompts/rag-platform/: 001-create-rag-platform-spec.spec.prompt.md  (+5 more)
physcial-ai-and-humanoid-robotics-course-book/: docusaurus.config.ts  package-lock.json  package.json
physcial-ai-and-humanoid-robotics-course-book/docs/: intro.md
specs/1-rag-platform/: plan.md  quickstart.md  research.md  spec.md  tasks-focused.md  tasks.md
(+26 files in other folders)
